WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58311
Member field in PluginView for efl port is not initialized
https://bugs.webkit.org/show_bug.cgi?id=58311
Summary
Member field in PluginView for efl port is not initialized
Mariusz Grzegorczyk
Reported
2011-04-12 02:28:28 PDT
Initialize m_window member field for efl port in constructor.
Attachments
Initializing of m_window member field in PluginView's constructor for efl port
(1.15 KB, patch)
2011-04-12 02:33 PDT
,
Mariusz Grzegorczyk
eric
: review+
eric
: commit-queue-
Details
Formatted Diff
Diff
Initializing of m_window member field in PluginView's constructor for efl port
(1.18 KB, patch)
2011-04-20 02:02 PDT
,
Mariusz Grzegorczyk
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mariusz Grzegorczyk
Comment 1
2011-04-12 02:33:06 PDT
Created
attachment 89180
[details]
Initializing of m_window member field in PluginView's constructor for efl port
Eric Seidel (no email)
Comment 2
2011-04-12 10:55:35 PDT
Comment on
attachment 89180
[details]
Initializing of m_window member field in PluginView's constructor for efl port View in context:
https://bugs.webkit.org/attachment.cgi?id=89180&action=review
OK.
> Source/WebCore/ChangeLog:8 > + No new tests. (OOPS!)
This prevents the CQ from landing yoru patch. You should have replaced this with a string saying how testing isn't needed/possible for this patch.
Mariusz Grzegorczyk
Comment 3
2011-04-20 02:02:41 PDT
Created
attachment 90323
[details]
Initializing of m_window member field in PluginView's constructor for efl port
Andreas Kling
Comment 4
2011-04-20 05:51:52 PDT
Comment on
attachment 90323
[details]
Initializing of m_window member field in PluginView's constructor for efl port Sure.
WebKit Commit Bot
Comment 5
2011-04-20 06:20:50 PDT
Comment on
attachment 90323
[details]
Initializing of m_window member field in PluginView's constructor for efl port Clearing flags on attachment: 90323 Committed
r84362
: <
http://trac.webkit.org/changeset/84362
>
WebKit Commit Bot
Comment 6
2011-04-20 06:20:55 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 7
2011-04-20 08:42:17 PDT
http://trac.webkit.org/changeset/84362
might have broken GTK Linux 32-bit Debug
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug