2011-04-20  Mariusz Grzegorczyk  <mariusz.g@samsung.com>

Reviewed by Andreas Kling.

        [EFL] Initializing m_window member field in PluginView.cpp for efl port
        https://bugs.webkit.org/show_bug.cgi?id=58311

        No new tests needed: only initializing class member.

        * plugins/PluginView.cpp:
        (WebCore::PluginView::PluginView):

Canonical link: https://commits.webkit.org/74102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84362 268f45cc-cd09-0410-ab3c-d52691b4dbfc